2002-11-12  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (confirm_append_address): New function.

	* MessageLogger.py (MessageLogger.write): Log X-Primary-Address.

	* Defaults.py (PRIMARY_ADDRESS_MATCH): New variable.

2002-11-10  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (build_cdb): Uniquify ftmp when doing cdbmake.

2002-11-08  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py (SUMMARY_HEADERS): New variable.

	* Deliver.py (Deliver.deliver): Retain From_ when doing a program
	delivery.

2002-11-03  Jason R. Mastaler  <jason@aguirre.la.mastaler.com>

	* AutoResponse.py (AutoResponse.create): Add Version.CODENAME to
	X-Delivery-Agent.
	
2002-11-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (maketext): Recognize TEMPLATE_DIR_MATCH_SENDER.
	
	* Defaults.py (TEMPLATE_DIR_MATCH_SENDER): New variable.

2002-10-18  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (normalize_sender): New fuction, moved from
	tmda-rfilter.
	
	* Defaults.py (AUTORESPONSE_INCLUDE_SENDER_COPY): New variable.

	(TEMPLATE_EMAIL_HEADERS): Ditto.
	(TEMPLATE_ENCODED_HEADERS): Ditto.

	* AutoResponse.py: New file.

2002-10-04  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py (MESSAGE_TAG_HEADER_STYLE): New variable.

2002-10-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* pythonlib/email: Sync up with email 2.4.

2002-09-30  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (sendmail): Accept a whole message string rather than
	header and body strings as two separate arguments.

	(body_as_raw_string): New function.
	(headers_as_list): Ditto.
	(headers_as_raw_string): Ditto.
	(headers_as_string): Ditto.
	(rename_headers): Ditto.
	
	* Deliver.py: Use an email.Message object rather than an
	rfc822.Message object and message body.

	* MTA.py: Ditto.

	* MessageLogger.py: Ditto.

2002-09-26  Tim Legant  <tim@catseye.net>
